-issue#1185: Layout issue with Graphs having large number of data columns
-issue#1189: Allow ability to sort tree list by name asc/desc
-issue#1190: When Enabling, Disabling, Uninstalling plugin, you should page refresh
-issue#1191: Tree sequences were not set or checked
-issue#1202: Fix backspace functionality on filter input boxes
-issue: Named colors were not importing on install/upgrade
-feature: Enhance Cacti filter API to permit more glyphs for table headers
-feature: Add a page refresh dropdown to the Automation Networks page
-feature: When a user chooses '[None]' for SNMP Auth/Privacy, hide/clear passphrases

1.1.30
-issue#1155: Non-secure mail setting not functional due to changes in phpmailer
-issue#1157: Resolve issue with branch permission api
-issue#1158: Change CLOG to use regex replacement so line details are not mangled
-issue#1161: Graph View regex's are not preserved during automatic page refresh
-issue#1162: Error messages are not display when editing a user
-issue#1166: Default language was not correctly set when editing a user
-issue#1182: Support noAuthNoPriv for SNMPv3 in Cacti
-issue: basename function undefined during upgrade to 1.0.x
-issue: Storage API and translations required for Change password function
-issue: ALTER IGNORE still throws an error when attempting to drop the primary key
-issue: Data Source profile form API generates error when system is half upgraded
-issue: Resolve issue with importing packages
-feature: Update package versions for Cacti version 1.1.29

1.1.29
-issue#871: Allow Nth Percentile and Bandwidth Summation to respect 'Base Value' in template
-issue#965: Duplicate error message and incorrect error code when using LDAP authentication
-issue#1084: Graph Tree Branch not properly populating when editing report item
-issue#1104: Datetime formatting in developer debug mode incorrect
-issue#1106: Template Filters has empty row
-issue#1109: URL used in redirection when referrer already has parameters in it